src/objects/OM_Buying_Contracting_Groups__c.object
<CustomObject>
    <description>Custom object for tracking GPO, Buying Group, and Contract Group information, will be used in conjunction with a custom junction object.</description>
    <fields>
        <fullName>OM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_BG_Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BG Power of One</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Group_Type__c</fullName>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GPO</fullName>
                </value>
                <value>
                    <fullName>Buying Group</fullName>
                </value>
                <value>
                    <fullName>Contracting Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Short_Name__c</fullName>
        <label>Short Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Total_Members__c</fullName>
        <label>Total Members</label>
        <summaryForeignKey>OM_Group_Relationships__c.OM_Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Buying/Contracting Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OM_Group_Type__c</columns>
        <columns>OM_Total_Members__c</columns>
        <columns>OM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Buying_Groups</fullName>
        <columns>NAME</columns>
        <columns>OM_Group_Type__c</columns>
        <columns>OM_Total_Members__c</columns>
        <columns>OM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OM_Group_Type__c</field>
            <operation>equals</operation>
            <value>Buying Group</value>
        </filters>
        <label>Buying Groups</label>
    </listViews>
    <listViews>
        <fullName>Contracting_Groups</fullName>
        <columns>NAME</columns>
        <columns>OM_Group_Type__c</columns>
        <columns>OM_Total_Members__c</columns>
        <columns>OM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OM_Group_Type__c</field>
            <operation>equals</operation>
            <value>Contracting Group</value>
        </filters>
        <label>Contracting Groups</label>
    </listViews>
    <listViews>
        <fullName>GPOs</fullName>
        <columns>NAME</columns>
        <columns>OM_Group_Type__c</columns>
        <columns>OM_Total_Members__c</columns>
        <columns>OM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OM_Group_Type__c</field>
            <operation>equals</operation>
            <value>GPO</value>
        </filters>
        <label>GPOs</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buying/Contracting Groups</pluralLabel>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>